Remove javadoc from custom build script